gatekeeper-tests/constraints/disallow-imagepullpolicy-always.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowImagePullPolicyAlways
metadata:
  name: disallow-imagepullpolicy-always
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - examensarbete-app
